# fwh_conflict

./: README.md  pyproject.toml
src/conflict/: __init__.py  _lib.py  storage.py
src/conflict/ffl/: conflict.ffl
src/conflict/handlers/: __init__.py  conflict_handlers.py
tests/: test_conflict.py
